[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "pynt"
version = "1.0.0"
authors = [
    { name = "Masum Billal", email = "billalmasum93@gmail.com" },
    { name = "Samin Riasat", email = "nayel71@gmail.com" },
]
description = "A Number Theory Library for Python 3"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

dependencies = ["sphinx>=6.1.3", "numpy>=1.24.2"]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "requests",
    "pytest",
    "coverage",
    "bandit",
    "mypy",
]
