[tool.poetry]
name = "pynt"
version = "1.0.0"
description = "A Number Theory Library for Python 3"
authors = [
    "Masum Billal <billalmasum93@gmail.com>",
    "Samin Riasat <nayel71@gmail.com>",
]

license = "LICENSE"

readme = "README.md"
repository = "https://github.com/math-projects/pynt"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
sphinx = ">=6.1.3"
pre-commit = "*"

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.black]
line_length = 88
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"
coverage = "*"
bandit = "*"
flake8 = "*"
isort = "*"
tox = "*"


[tool.bandit]
exclude_dirs = []
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
